implement task details page and edit

--- a/src/app/task-list-page/task-list-page.component.html
+++ b/src/app/task-list-page/task-list-page.component.html
@@ -1,4 +1,4 @@
 <div class="task-list-page-container">
-  <app-tasks [tasks]="taskList$"></app-tasks>
+  <app-tasks [tasks]="taskList$ | async"></app-tasks>
   <app-add-task (addTask)="handleAddTask($event)"></app-add-task>
 </div>
